Bug 329625 - Brush outliner doesn't give hover rotation feedback for Rotation->Ascension sensor
Summary: Brush outliner doesn't give hover rotation feedback for Rotation->Ascension s...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-05 18:29 UTC by David REVOY
Modified: 2014-01-07 11:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Webcam video of the bug (Xvid, 1.8MB) (1.75 MB, video/x-msvideo)
2014-01-06 21:57 UTC, David REVOY
Details
a KPP preset using Ascension ( encapsuled in a Tar.Gz ) (23.28 KB, application/gzip)
2014-01-07 10:31 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2014-01-05 18:29:16 UTC
Hi, the brush outliner doesn't give hover rotation feedback for Rotation->Ascension sensor. 

Rotation->Drawing Angle works ok. 
Rotation->Fuzzy is desactivated by design ( thx http://quickgit.kde.org/?p=calligra.git&a=commit&h=0cb8007b7ef33b47681b11d8466818bec3b6c27c , really cool ).

I don't know if Rotation->Ascension hover feedback was working before the 'fuzzy' fix , or if it is a side effect regression.
Comment 1 Dmitry Kazakov 2014-01-06 19:51:34 UTC
Hi, David!

Could you apply this tiny patch to activate tablet events logging and send me the output?

http://pastebin.kde.org/pibuuedxc

The point is that I don't have tilt-capable device, so I cannot tell whether the tablet returns this value in hover mode or not.
Comment 2 David REVOY 2014-01-06 21:57:17 UTC
Created attachment 84488 [details]
Webcam video of the bug (Xvid, 1.8MB)

Hi, the output didn't return informations.
To be sure you can understand the effect, and the bug ; I made a video using my webcam. 

On the video ; 
- You can see my stylus flying over the Cintiq screen. 
- The brush use Rotation>Ascension sensor.
- When the brush is in hover mode ; the outliner is static
- When the brush paint, the rotation follow the angle of my stylus. 

I would like to get 'live preview' of the rotation of the outliner in hover mode too :-)
Comment 3 Dmitry Kazakov 2014-01-07 07:58:36 UTC
Git commit 1cf8a86b5c864088d4201ed726613c4c9a387790 by Dmitry Kazakov.
Committed on 07/01/2014 at 07:58.
Pushed by dkazakov into branch 'master'.

Probably fix the Ascension sensor in Hover mode

This patch passes the real tablet event to the outline generator
in hovering mode, so if your tablet supports rotational sensors it
the outline will be generated accordingly.

Please someone test it with a proper Tablet Device.

M  +13   -2    krita/image/brushengine/kis_paint_information.cc
M  +6    -1    krita/image/brushengine/kis_paint_information.h
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_line.cc
M  +3    -3    krita/plugins/tools/defaulttools/kis_tool_multihand.cpp
M  +17   -0    krita/ui/tool/kis_painting_information_builder.cpp
M  +4    -0    krita/ui/tool/kis_painting_information_builder.h
M  +7    -5    krita/ui/tool/kis_tool_freehand.cc
M  +1    -0    krita/ui/tool/kis_tool_freehand.h
M  +2    -1    krita/ui/tool/kis_tool_freehand_helper.cpp
M  +4    -1    krita/ui/tool/kis_tool_freehand_helper.h
M  +12   -9    krita/ui/tool/kis_tool_paint.cc
M  +3    -2    krita/ui/tool/kis_tool_paint.h
M  +1    -1    krita/ui/tool/kis_tool_polyline_base.cpp
M  +1    -1    krita/ui/tool/kis_tool_rectangle_base.cpp

http://commits.kde.org/calligra/1cf8a86b5c864088d4201ed726613c4c9a387790
Comment 4 Dmitry Kazakov 2014-01-07 08:07:01 UTC
Git commit 19e8d3c86a6fc50dfe9957f205c95da744e92c1f by Dmitry Kazakov.
Committed on 07/01/2014 at 07:58.
Pushed by dkazakov into branch 'calligra/2.8'.

Probably fix the Ascension sensor in Hover mode

This patch passes the real tablet event to the outline generator
in hovering mode, so if your tablet supports rotational sensors it
the outline will be generated accordingly.

Please someone test it with a proper Tablet Device.

M  +13   -2    krita/image/brushengine/kis_paint_information.cc
M  +6    -1    krita/image/brushengine/kis_paint_information.h
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_line.cc
M  +3    -3    krita/plugins/tools/defaulttools/kis_tool_multihand.cpp
M  +17   -0    krita/ui/tool/kis_painting_information_builder.cpp
M  +4    -0    krita/ui/tool/kis_painting_information_builder.h
M  +7    -5    krita/ui/tool/kis_tool_freehand.cc
M  +1    -0    krita/ui/tool/kis_tool_freehand.h
M  +2    -1    krita/ui/tool/kis_tool_freehand_helper.cpp
M  +4    -1    krita/ui/tool/kis_tool_freehand_helper.h
M  +12   -9    krita/ui/tool/kis_tool_paint.cc
M  +3    -2    krita/ui/tool/kis_tool_paint.h
M  +1    -1    krita/ui/tool/kis_tool_polyline_base.cpp
M  +1    -1    krita/ui/tool/kis_tool_rectangle_base.cpp

http://commits.kde.org/calligra/19e8d3c86a6fc50dfe9957f205c95da744e92c1f
Comment 5 Dmitry Kazakov 2014-01-07 09:54:00 UTC
I can't test this bug, so Boud agreed to look into it :)
Comment 6 David REVOY 2014-01-07 10:31:02 UTC
Created attachment 84492 [details]
a KPP preset using Ascension ( encapsuled in a Tar.Gz )
Comment 7 Dmitry Kazakov 2014-01-07 11:46:18 UTC
Git commit 3ad5aec9d89ed774d9c6e4307b5819ff4b2015d9 by Dmitry Kazakov.
Committed on 07/01/2014 at 11:44.
Pushed by dkazakov into branch 'master'.

Fix forwarding of the real events to the tool while Tablet Hovers the canvas

Thanks Boudewijn Rempt for the help searching for the reason of the bug!

M  +12   -0    krita/ui/canvas/kis_tool_proxy.cpp
M  +2    -0    krita/ui/canvas/kis_tool_proxy.h
M  +1    -1    krita/ui/input/kis_input_manager.cpp

http://commits.kde.org/calligra/3ad5aec9d89ed774d9c6e4307b5819ff4b2015d9
Comment 8 Dmitry Kazakov 2014-01-07 11:47:05 UTC
Git commit 8cf9ef639cc823d65c49dadd1413651f029033c9 by Dmitry Kazakov.
Committed on 07/01/2014 at 11:44.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix forwarding of the real events to the tool while Tablet Hovers the canvas

Thanks Boudewijn Rempt for the help searching for the reason of the bug!

M  +12   -0    krita/ui/canvas/kis_tool_proxy.cpp
M  +2    -0    krita/ui/canvas/kis_tool_proxy.h
M  +1    -1    krita/ui/input/kis_input_manager.cpp

http://commits.kde.org/calligra/8cf9ef639cc823d65c49dadd1413651f029033c9