Fix forwarding of the real events to the tool while Tablet Hovers the canvas

Thanks Boudewijn Rempt for the help searching for the reason of the bug!

BUG:329625